tests/reference/asr-test_set_object5-4bd1044.stderr
semantic error: Unhashable type: 'dict'
 --> tests/errors/test_set_object5.py:2:12
  |
2 |     print({{1: "a", 2: "b"}, {3: "c", 4: "d"}})
  |            ^^^^^^^^^^^^^^^^ Mutable type 'dict' cannot be stored in a set.
